Realization of signing in of user

--- a/frontend/src/app/pages/login/login.component.html
+++ b/frontend/src/app/pages/login/login.component.html
@@ -5,6 +5,9 @@
     autocomplete="off"
     (ngSubmit)="onSubmit()"
   >
+    <div *ngIf="error | async" class="error">
+      Wrong data!
+    </div>
     <mat-form-field appearance="outline">
       <mat-label>Email</mat-label>
       <input
