--- a/frontend/src/app/pages/posts/posts.component.html
+++ b/frontend/src/app/pages/posts/posts.component.html
@@ -1,1 +1,5 @@
-<p>posts works!</p>
+<mat-card *ngFor="let post of (posts | async)">
+  <mat-card-content>
+    <p>{{ post.title }}</p>
+  </mat-card-content>
+</mat-card>
