--- a/frontend/src/app/pages/navigation/navigation.component.html
+++ b/frontend/src/app/pages/navigation/navigation.component.html
@@ -16,7 +16,7 @@
       <mat-icon>account_circle</mat-icon>
     </button>
     <mat-menu #menu="matMenu">
-      <button mat-menu-item>Profile</button>
+      <button mat-menu-item routerLink="new-post/">new post</button>
       <button mat-menu-item (click)="logout()">Logout</button>
     </mat-menu>
   </nav>
