--- a/frontend/src/app/pages/posts/posts.component.html
+++ b/frontend/src/app/pages/posts/posts.component.html
@@ -1,5 +1,5 @@
 <div class="posts-block">
-  <mat-card *ngFor="let post of (posts | async)">
+  <mat-card *ngFor="let post of (posts | async)" [routerLink]="['post-details/', post.id]">
     <mat-card-content fxLayout="row" fxLayoutAlign="flex-start">
       <img  mat-card-md-image [alt]="post.title" [src]="post.image | image">
       <div style="margin-left: 20px;">
