Realization of commenting post

--- a/frontend/src/app/pages/login/login.component.html
+++ b/frontend/src/app/pages/login/login.component.html
@@ -3,8 +3,7 @@
     #f="ngForm"
     fxLayout="column"
     autocomplete="off"
-    (ngSubmit)="onSubmit()"
-  >
+    (ngSubmit)="onSubmit()">
     <div *ngIf="error | async" class="error">
       Wrong data!
     </div>
@@ -12,8 +11,7 @@
       <mat-label>Email</mat-label>
       <input
         type="email" name="email" autocomplete="username"
-        email required matInput ngModel #email="ngModel"
-      />
+        email required matInput ngModel #email="ngModel"/>
       <mat-error *ngIf="email.touched && email.hasError('required')">
         Email is required!
       </mat-error>
@@ -21,28 +19,23 @@
         Enter correct email!
       </mat-error>
     </mat-form-field>
-
     <mat-form-field appearance="outline">
       <mat-label>Password</mat-label>
       <input
         type="password" name="password" autocomplete="current-password"
-        required matInput ngModel #password="ngModel"
-      />
+        required matInput ngModel #password="ngModel"/>
       <mat-error *ngIf="password.touched && password.hasError('required')">
         Password is required!
       </mat-error>
     </mat-form-field>
-
     <div fxLayout="row" fxLayoutAlign="center" style="margin-bottom: 16px">
       <a routerLink="/register">Don't have an account? Sign Up</a>
     </div>
-
     <button
       type="submit"
       mat-raised-button
       color="primary"
-      [disabled]="f.invalid"
-    >
+      [disabled]="f.invalid || (loading | async)">
       SIGN IN
     </button>
   </form>
