--- a/frontend/src/app/pages/posts/posts.component.html
+++ b/frontend/src/app/pages/posts/posts.component.html
@@ -1,11 +1,17 @@
-<div class="posts-block">
-  <mat-card *ngFor="let post of (posts | async)" [routerLink]="['post-details/', post.id]">
-    <mat-card-content fxLayout="row" fxLayoutAlign="flex-start">
-      <img  mat-card-md-image [alt]="post.title" [src]="post.image | image">
-      <div style="margin-left: 20px;">
-        <p>Datetime: {{ post.datetime.slice(0, 21) }}, by <strong>{{ post.user.name }}</strong> </p>
-        <p><a href="#">{{ post.title }}</a></p>
-      </div>
-    </mat-card-content>
-  </mat-card>
+<div *ngIf="(loading | async) else postsBlock" fxLayout="row" fxLayoutAlign="center center" style="margin-top: 50px;">
+  <mat-spinner></mat-spinner>
 </div>
+<ng-template #postsBlock>
+  <div class="posts-block">
+    <mat-card *ngFor="let post of (posts | async)" [routerLink]="['post-details/', post.id]">
+      <mat-card-content fxLayout="row" fxLayoutAlign="flex-start">
+        <img mat-card-md-image [alt]="post.title" [src]="post.image | image">
+        <div style="margin-left: 20px;">
+          <p>Datetime: {{ post.datetime.slice(0, 21) }}, by <strong>{{ post.user.name }}</strong></p>
+          <p>{{ post.title }}</p>
+        </div>
+      </mat-card-content>
+    </mat-card>
+  </div>
+</ng-template>
+
